Fixed action bar not showing for first message and post

--- a/components/Explore/Explore.css
+++ b/components/Explore/Explore.css
@@ -9,7 +9,7 @@
     display: grid;
     gap: 150px;
     margin: 0px 20px;
-    padding: 20px 0px;
+    padding: 0px;
     overflow: hidden;
     grid-template-columns: 2fr 5fr 2fr;
     flex: 1;
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0px;
-    padding: 0px;
+    padding-top: calc(2*var(--reaction-img-size));
 }
 
 #explore-page .actions>*{
@@ -76,7 +76,6 @@
 }
 
 #explore-page .content-container{
-    padding-top: 25px;
     display: flex;
     flex-direction: column;
     gap: 50px;
